<resources>
    <string name="app_name">DBOX</string>
    <string name="login_phone">手机登录</string>
    <string name="login_email">邮箱登录</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="phone">手机</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="signup">注册</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="logining">登录中...</string>
    <string name="login_aty_username_or_pwd_cannot_be_empty">用户名或密码不能为空</string>
    <string name="choose_area">选择国家和地区</string>
    <string name="search">搜索</string>
    <string name="register_phone">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="register_aty_input_phonenumber">手机号</string>
    <string name="register_aty_input_pwd_again">重复密码</string>
    <string name="register_aty_vercode_hint">验证码</string>
    <string name="register_aty_fetch_vercode">获取验证码</string>
    <string name="rePwd_error">密码重复错误</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="email_not_empty">邮箱不能为空</string>
    <string name="register_success">注册成功</string>
    <string name="vcode_send_success">验证码发送成功</string>
    <string name="vcode_not_empty">验证码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="new_password">新密码</string>
    <string name="enter_phone_number_first">请先输入手机号</string>
    <string name="enter_email_first">请先输入邮箱</string>
    <string name="success_reset_password">重置密码成功</string>
    <string name="gateway_device">网关设备</string>
    <string name="main_aty_ablecloud">DBOX</string>
    <string name="main_aty_nodevice">无绑定的设备，\n请绑定添加设备</string>
    <string name="xlistview_nerver_have_a_refresh">还未更新过</string>
    <string name="xlistview_just_a_minute">刚刚</string>
    <string name="xlistview_refreshtime_desc1">%1$d分%2$d秒前</string>
    <string name="xlistview_refreshtime_desc2">%1$d小时%2$s</string>
    <string name="xlistview_refreshtime_desc3">%1$d天%2$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="delete">删除</string>
    <string name="set">设置</string>
    <string name="share">分享</string>
    <string name="delete_device_success">刪除成功</string>
    <string name="device_name">设备名称</string>
    <string name="the_device_name_change_fails_please_try_again">设备名称修改失败，请重试</string>
    <string name="new_name">新名字</string>
    <string name="wifi_add">wifi添加</string>
    <string name="qr_code_scanner">二维码扫描</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="send">发送</string>
    <string name="clear">清除</string>

    <!-- ablecloud异常 -->
    <string name="no_wifi">手机没有wifi连接</string>
    <string name="no_net">手机无法连接外网</string>
    <string name="decryption_error">解密出错</string>
    <string name="unmatched_device">无法匹配设备</string>
    <string name="invalid_parameter">无效的参数</string>
    <string name="request_timeout">请求超时</string>
    <string name="network_error1">网络出错</string>
    <string name="internal_error">内部错误</string>
    <string name="system_error">系统内部错误</string>
    <string name="illegal_request">请求参数不合法</string>
    <string name="unsupport_request">不支持的请求</string>
    <string name="unallowed_request">不允许的请求</string>
    <string name="request_without_permission">请求没有权限</string>
    <string name="request_not_exist">请求服务不存在</string>
    <string name="service_unavailable">服务暂不可用</string>
    <string name="request_timeout1">请求超时</string>
    <string name="net_anomaly">网络异常</string>
    <string name="service_error">服务错误</string>
    <string name="account_no_exist">账号不存在</string>
    <string name="account_exist">账号已存在</string>
    <string name="account_illegal">账号不合法</string>
    <string name="password_error">密码错误</string>
    <string name="ver_code_error">验证码错误</string>
    <string name="ver_code_invalid">验证码已失效</string>
    <string name="email_illegal">邮箱不合法</string>
    <string name="phone_illegal">手机不合法</string>
    <string name="account_anomaly">账号状态异常</string>
    <string name="account_bound">账号已绑定</string>
    <string name="device_no_exist">设备不存在</string>
    <string name="device_exist">设备已存在</string>
    <string name="message_illegal">消息不合法</string>
    <string name="device_no_online">设备不在线</string>
    <string name="device_bound">设备已绑定</string>
    <string name="device_no_bound">设备未绑定</string>
    <string name="device_abnormality">设备状态异常</string>
    <string name="response_timeout">设备响应超时</string>
    <string name="bind_timeout">绑定设备超时</string>
    <string name="device_not_activated">设备未激活</string>
    <string name="device_busy">设备忙</string>
    <string name="device_unauthorized">设备未授权</string>
</resources>
