<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/register_back"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@mipmap/nav_btn_back"
            android:contentDescription="@string/app_name"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/choice_left"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnTab001"
            style="@style/nav_btn_style_login"
            android:layout_height="match_parent"
            android:text="@string/register_phone"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnTab002"
            style="@style/nav_btn_style_login"
            android:layout_height="wrap_content"
            android:text="@string/register_email"
            android:textColor="#007AFF" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="1dp"
        >

        <EditText
            android:id="@+id/register_edit_tel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/area_code"
            android:background="@color/transparent"
            android:hint="@string/register_aty_input_phonenumber"
            android:inputType="phone"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/area_code"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/register_edit_tel"
            android:layout_alignBottom="@+id/register_edit_tel"
            android:text="+86"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_emali"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="1dp"
        android:visibility="gone"
         >
        <EditText
            android:id="@+id/register_edit_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:hint="@string/email"
            android:paddingLeft="55dp"
            android:textSize="17sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >

        <EditText
            android:paddingLeft="55dp"
            android:id="@+id/register_edit_pwd"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:hint="@string/password"
            android:password="true"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >

        <EditText
            android:id="@+id/register_edit_repwd"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="55dp"
            android:background="@color/transparent"
            android:hint="@string/register_aty_input_pwd_again"
            android:password="true"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >


        <EditText
            android:id="@+id/register_edit_vcode"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:paddingLeft="55dp"
            android:hint="@string/register_aty_vercode_hint"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_vcode"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/register_edit_vcode"
            android:background="@drawable/selectors_btn_button"
            android:text="@string/register_aty_fetch_vercode"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="20dp"
    >
    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@drawable/selectors_btn_button"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="16sp" />
</LinearLayout>

</LinearLayout>